Enabled mobile layout

--- a/index.html
+++ b/index.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles/styles.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
 
+</head>
+
+<body>
+  <div class="preview">
+    <main class="preview__card">
+      <picture class="preview__card__header">
+        <source srcset="./images/image-header-mobile.jpg 320w" media="(max-width:768px)">
+        <source srcset="./images/image-header-desktop.jpg 768w" media="(min-width:768px)">
+        <img src="./images/image-header-mobile.jpg" alt="team meeting">
+          </picture>
+        <div class="preview__card__content">
+          <h3 class="preview__card__content__title">Get <span class="preview__card__content__title__highlight">insights</span> that help your business grow.</h3>
+          <p class="preview__card__content__description">Discover the benefits of data analytics and make better
+            decisions
+            regarding revenue, customer
+            experience, and overall efficiency.</p>
+          <div class="preview__card__content__stats">
+            <span class="preview__card__content__stats__info">
+              <h4>10k+</h4>
+              <span class="preview__card__content__stats__info__type ">companies</span>
+            </span>
+            <span class="preview__card__content__stats__info">
+              <h4>314</h4>
+              <span class="preview__card__content__stats__info__type ">templates</span>
+            </span>
+            <span class="preview__card__content__stats__info">
+              <h4>12M+</h4>
+              <span class="preview__card__content__stats__info__type ">queries</span>
+            </span>
+          </div>
+        </div>
+    </main>
+  </div>
+  <!-- 
   Get insights that help your business grow.
 
   Discover the benefits of data analytics and make better decisions regarding revenue, customer 
@@ -23,11 +53,12 @@
 
   10k+ companies
   314 templates
-  12m+ queries
+  12m+ queries -->
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a target="_blank" href="https://github.com/jaymit123">Jaymit Desai</a>.
   </div>
 </body>
+
 </html>
