Completed Desktop Dev

--- a/index.html
+++ b/index.html
@@ -21,28 +21,31 @@
         <source srcset="./images/image-header-mobile.jpg 320w" media="(max-width:768px)">
         <source srcset="./images/image-header-desktop.jpg 768w" media="(min-width:768px)">
         <img src="./images/image-header-mobile.jpg" alt="team meeting">
-          </picture>
-        <div class="preview__card__content">
-          <h3 class="preview__card__content__title">Get <span class="preview__card__content__title__highlight">insights</span> that help your business grow.</h3>
-          <p class="preview__card__content__description">Discover the benefits of data analytics and make better
+      </picture>
+      <div class="preview__card__content">
+        <h3 class="preview__card__content__title">Get <span
+            class="preview__card__content__title__highlight">insights</span> that help your business grow.</h3>
+        <div class="preview__card__content__main">
+          <p class="preview__card__content__main__description">Discover the benefits of data analytics and make better
             decisions
             regarding revenue, customer
             experience, and overall efficiency.</p>
-          <div class="preview__card__content__stats">
-            <span class="preview__card__content__stats__info">
+          <div class="preview__card__content__main__stats">
+            <span class="preview__card__content__main__stats__info">
               <h4>10k+</h4>
-              <span class="preview__card__content__stats__info__type ">companies</span>
+              <span class="preview__card__content__main__stats__info__type ">companies</span>
             </span>
-            <span class="preview__card__content__stats__info">
+            <span class="preview__card__content__main__stats__info">
               <h4>314</h4>
-              <span class="preview__card__content__stats__info__type ">templates</span>
+              <span class="preview__card__content__main__stats__info__type ">templates</span>
             </span>
-            <span class="preview__card__content__stats__info">
+            <span class="preview__card__content__main__stats__info">
               <h4>12M+</h4>
-              <span class="preview__card__content__stats__info__type ">queries</span>
+              <span class="preview__card__content__main__stats__info__type ">queries</span>
             </span>
           </div>
         </div>
+      </div>
     </main>
   </div>
   <!-- 
