Addressing html issues

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div class="preview">
     <main class="preview__card">
       <picture class="preview__card__header">
-        <source srcset="./images/image-header-mobile.jpg 320w" media="(max-width:768px)">
-        <source srcset="./images/image-header-desktop.jpg 768w" media="(min-width:768px)">
+        <source srcset="./images/image-header-mobile.jpg" media="(max-width:768px)">
+        <source srcset="./images/image-header-desktop.jpg" media="(min-width:768px)">
         <img src="./images/image-header-mobile.jpg" alt="team meeting">
       </picture>
       <div class="preview__card__content">
@@ -31,18 +31,18 @@
             regarding revenue, customer
             experience, and overall efficiency.</p>
           <div class="preview__card__content__main__stats">
-            <span class="preview__card__content__main__stats__info">
+            <div class="preview__card__content__main__stats__info">
               <h4>10k+</h4>
               <span class="preview__card__content__main__stats__info__type ">companies</span>
-            </span>
-            <span class="preview__card__content__main__stats__info">
+            </div>
+            <div class="preview__card__content__main__stats__info">
               <h4>314</h4>
               <span class="preview__card__content__main__stats__info__type ">templates</span>
-            </span>
-            <span class="preview__card__content__main__stats__info">
+            </div>
+            <div class="preview__card__content__main__stats__info">
               <h4>12M+</h4>
               <span class="preview__card__content__main__stats__info__type ">queries</span>
-            </span>
+            </div>
           </div>
         </div>
       </div>
